--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Basic Codlab</string>
-    <string name="welcome_to_the_basics_codelab">Welcome to the PRONTU!</string>
+    <string name="welcome_to_the_basics_codelab">Welcome to the Codelab!</string>
 </resources>
